# gensim

./: .coafile  .gitignore  .gitmodules  .travis.yml  ArticleDB.py  CHANGELOG.md  CHANGELOG.txt  CITATION.cff  CONTRIBUTING.md  COPYING  DocumentCollection.py  HACKTOBERFEST.md  INSTALL.txt  ISSUE_TEMPLATE.md  Keras-2.1.2-py2.7.egg  MANIFEST.in  NLP_Pre_Processing_Functions_EnglishText.ipynb  README.git.txt  README.md  README.rst  README.txt  README_Korean.md  SECURITY.md  Sent2Vec Tests and Tutorial.ipynb  Sent2Vec Tests.ipynb  TODO.txt  [WIP] Address Detection Evaluation .ipynb  [WIP] Address Detection Evaluation.ipynb  __init__.py  appveyor.yml  arxiv2dml.py  azure-pipelines.yml  azure.yml  bakalarka.py  bench.py  bug.py  build_tfidf.py  check_ft_model.py  common.py  config.sh  (+72 more)
.circleci/: config.yml
.github/: FUNDING.yml
.spyproject/: codestyle.ini  encoding.ini  vcs.ini  workspace.ini
KenTests/: .~lock.sectionReport_v1_df.csv#  .~lock.sectionReport_v2_df.csv#  orig.txt  sectionReport_v1_df.csv  sectionReport_v2_df.csv  sections.txt  v2.txt
acme/: lee-wiki-streamParsing2008-cosines.py  para2para.py  text1.txt
ci/: install_wheels.py
conda.recipe/: meta.yaml
continuous_integration/: BucketLifecycleConfiguration.json  BucketLifecycleConfiguration.txt  check_wheels.py  debug.gdb  install_wheel.py  install_wheels.py  upgrade_pip_py310.py  urlretrieve.py
docker/: Dockerfile  Dockerfile.python  README.md  check_fast_version.py  docker-compose.yml  start_jupyter_notebook.sh  wordrank_install.sh
docs/: Makefile  Topics_and_Transformations.ipynb  about.html  adopters.md  apiref.html  apiref.rst  apiref_nextgen.rst  changes_080.html  conf.py  dist_lda.html  dist_lda.rst  dist_lsi.html  distributed.html  distributed.rst  fasttext-notes.md  freeze.py  genindex.html  index.html  indextoc.rst  install.html  interfaces.html  intro.html  matutils.html  modindex.html  objects.inv  py-modindex.html  requirements.txt  resources.md  run.py  search.html  searchindex.js  simserver.html  to_python.py  tut1.html  tut2.html  tut3.html  wiki.html  (+2 more)
(+2767 files in other folders)
