[build-system]
requires = [
    "Cython>=3.0.0",
    # oldest supported Numpy for this platform is 1.17 but the oldest supported by Gensim
    # is 1.18.5, remove the line when they increase oldest supported Numpy for this platform
    "numpy>=2.0.0; python_version>='3.9'",
    "setuptools",
    "wheel",
]
