[build-system]
requires = [
    "Cython>=3.1.3",
    # oldest supported Numpy for this platform is 1.17 but the oldest supported by Gensim
    # is 1.18.5, remove the line when they increase oldest supported Numpy for this platform
    # 20240604 GM: testing numpy-2.0.0 which requires python >= 3.9 (to 3.12)
    "numpy>=1.18.5; python_version>='3.9' and platform_machine not in 'arm64|aarch64'",
    # "oldest-supported-numpy; python_version>'3.8' or platform_machine in 'arm64|aarch64'",
    "scipy",
    "setuptools",
    "wheel",
]
